--- a/nicolas.html
+++ b/nicolas.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <h1>Hola mundo</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, saepe quis, tempore excepturi ipsam, veniam a consectetur placeat pariatur sequi nulla ratione aliquid quo tenetur modi eveniet dolorem repellendus deserunt.</p>
+    <ul>
+        <li>hola</li>
+        <li>mundo</li>
+        <li>Esta es una prueba</li>
+    </ul>
 </body>
 </html>
